--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -6,3 +6,6 @@ $dark-blue: rgb(50,65,82);
 $gray-blue: rgb(103,114,126);
 $light-gray: rgb(234,236,241);
 $very-light-gray: rgb(245,246,250);
+
+$desktop: 1440px;
+$mobile: 750px;
