--- a/src/Components/Comment/Comment.module.scss
+++ b/src/Components/Comment/Comment.module.scss
@@ -9,6 +9,13 @@
     .rightSide{
         width: 100%;
     }
+    @media screen and (max-width:$mobile) {
+        flex-direction: column;
+        .leftSide{
+            margin-top:10px;
+            order: 1;
+        }
+    }
 }
 
 .author{
@@ -51,4 +58,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    @media screen and (max-width:$mobile) {
+        bottom:20px;
+        top:inherit
+    }
 }
