--- a/src/Components/UI/SmallButton/SmallButton.module.scss
+++ b/src/Components/UI/SmallButton/SmallButton.module.scss
@@ -19,7 +19,7 @@
     &.delete{
         color:$soft-red;
     }
-    &:hover,&:focus{
+    &:hover, &.active{
         background-color: $very-light-gray;
     }
 }
