Edit / Update comment ready
added edit functionality

--- a/src/Components/UI/Button/Button.module.scss
+++ b/src/Components/UI/Button/Button.module.scss
@@ -14,7 +14,7 @@
     &.blue{
         background-color: $moderate-blue;
         &:hover,&:focus{
-            background-color: $gray-blue;
+            background-color: $light-gray-blue;
         }
     }
     &.red{
