--- a/src/Components/Comment/Comment.module.scss
+++ b/src/Components/Comment/Comment.module.scss
@@ -47,6 +47,31 @@
         font-weight: 400;
         color:$gray-blue;
     }
+    textarea{
+        width: 100%;
+        height: 100px;
+        background-color: white;
+        border:1px solid $light-gray;
+        resize:none;
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 400;
+        color:$gray-blue;
+        padding: 10px 20px;
+        border-radius: 10px;
+        &:focus, &:focus-visible{
+            outline: 1px solid $light-gray-blue
+        }
+    }
+}
+
+
+.buttonContainer{
+    margin-top: 10px;
+    button{
+        max-width: 100px;
+        float: right;
+    }
 }
 
 .actions{
