--- a/src/Components/UI/SmallButton/SmallButton.module.scss
+++ b/src/Components/UI/SmallButton/SmallButton.module.scss
@@ -22,4 +22,8 @@
     &:hover, &.active{
         background-color: $very-light-gray;
     }
+    &.disabled{
+        opacity: 0.5;
+        pointer-events: none;
+    }
 }
