--- a/src/Components/LikeAction/LikeAction.module.scss
+++ b/src/Components/LikeAction/LikeAction.module.scss
@@ -1,4 +1,4 @@
-@import '../../../scss/variables.scss';
+@import '../../scss/variables.scss';
 
 .likeContainer{
     display: flex;
@@ -37,5 +37,10 @@
     .minus{
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
+    }
+
+    &.disabled{
+        opacity: 0.7;
+        pointer-events: none;
     }
 }
