Added minor style changes
mostly fade in animations

--- a/src/Components/Comment/Comment.module.scss
+++ b/src/Components/Comment/Comment.module.scss
@@ -16,6 +16,11 @@
             order: 1;
         }
     }
+    opacity: 0;
+    transition: opacity 0.2s;
+    &.fadeIn{
+        opacity: 1;
+    }
 }
 
 .author{
