--- a/src/Components/AddComment/AddComment.module.scss
+++ b/src/Components/AddComment/AddComment.module.scss
@@ -5,6 +5,11 @@
     justify-content: center;
     align-items: center;
     
+    opacity: 0;
+    transition: opacity 0.2s;
+    &.fadeIn{
+        opacity: 1;
+    }
     .container{
         max-width: 730px;
         width: 100%;
