--- a/src/Components/Modal/Modal.module.scss
+++ b/src/Components/Modal/Modal.module.scss
@@ -8,6 +8,12 @@
     height: 100%;
     z-index: 10;
     background: rgba(0, 0, 0, 0.5);
+
+    opacity: 0;
+    transition: opacity 0.2s;
+    &.fadeIn{
+        opacity: 1;
+    }
 }
 
 .modal {
@@ -22,6 +28,13 @@
     overflow: hidden;
     align-items: center;
     justify-content: center;
+
+    opacity: 0;
+    transition: opacity 0.2s;
+    &.fadeIn{
+        opacity: 1;
+    }
+
     h2{
         color:$dark-blue;
         font-weight: 500;
