--- a/src/Components/Comment/Comment.module.scss
+++ b/src/Components/Comment/Comment.module.scss
@@ -4,7 +4,8 @@
     display: flex;
     .leftSide{
         min-width: 40px;
-        margin-right: 20px;
+        margin-right: 25px;
+        margin-left: 5px;
     }        
     .rightSide{
         width: 100%;
@@ -27,10 +28,11 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    margin-top:4px;
     img{
-        width:30px;
-        height: 30px;
-        margin-right: 9px;
+        width:32px;
+        height: 32px;
+        margin-right: 7px;
     }
     span{
         padding:0 9px;
@@ -40,6 +42,14 @@
         padding:0 9px;
         color:$dark-blue;
         font-weight: 500;
+    }
+    .badge{
+        background-color: $moderate-blue;
+        color:white;
+        padding: 2px 7px 4px;
+        border-radius: 2px;
+        font-size:13px;
+        line-height: 13px;
     }
 }
 
@@ -51,6 +61,9 @@
         line-height: 24px;
         font-weight: 400;
         color:$gray-blue;
+        span{
+            color:$moderate-blue;
+        }
     }
     textarea{
         width: 100%;
@@ -82,7 +95,7 @@
 .actions{
     position: absolute;
     right:20px;
-    top:0;
+    top:4px;
     height: 30px;
     margin-top:20px;
     display: flex;
