--- a/src/Components/UI/SmallButton/SmallButton.module.scss
+++ b/src/Components/UI/SmallButton/SmallButton.module.scss
@@ -5,12 +5,26 @@
     border:0;
     font-family: 'Rubik', sans-serif;
     font-size: 16px;
-    padding:10px;
+    padding:5px;
     border-radius: 10px;
-   // margin-left:10px;
+    font-weight: 500;
+    position: relative;
     cursor: pointer;
+    margin-left:35px;
     img{
-        padding-right: 5px;
+        position: absolute;
+    }
+    &.reply{
+        img{
+            top: 9px;
+            left:-17px;
+        }
+    }
+    &.edit{
+        img{
+            top: 7px;
+            left:-17px;
+        }
     }
     &.reply,
     &.edit{
@@ -18,6 +32,10 @@
     }
     &.delete{
         color:$soft-red;
+        img{
+            top: 7px;
+            left:-17px;
+        }
     }
     &:hover, &.active{
         background-color: $very-light-gray;
